# kernel-iface-analyzer

./: .gitignore  CMakeLists.txt  README.md
include/kia/common/: json_utils.h  path_utils.h  source_utils.h
scripts/: classify.py  export_scanner.py  extract_file_calls.py  merge.py  run_pipeline.py
src/: call_extractor.cpp  function_extractor.cpp  tu_indexer.cpp
src/common/: path_utils.cpp  source_utils.cpp
